// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row flex布局 1`] = `
<div>
  <div
    class="box"
  >
    <div
      class="xl-row-flex xl-row-flex--top"
      role="row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-row-flex xl-row-flex--middle"
      role="row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-row-flex xl-row-flex--bottom"
      role="row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-row-flex xl-row-flex--start"
      role="row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-row-flex xl-row-flex--center"
      role="row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-row-flex xl-row-flex--end"
      role="row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-row-flex"
      role="row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-order-3 xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-order-1 xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-order-2 xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Row 偏移布局 1`] = `
<div>
  <div
    class="box"
  >
    <div
      class="xl-row"
      role="row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-offset-6 xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-row"
      role="row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-push-6 xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-pull-6 xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-row"
      role="row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-offset-6 xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-pull-12 xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Row 响应式偏移 1`] = `
<div>
  <div
    class="box"
  >
    <div
      class="xl-row"
      role="row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-row"
      role="row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-row"
      role="row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-offset-6 xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Row 响应式布局 1`] = `
<div
  class="box"
>
  <div
    class="xl-row"
    role="row"
  >
    <div
      class="xl-col"
      role="cell"
    >
      <div
        class="col"
      >
        col1
      </div>
    </div>
    <div
      class="xl-col"
      role="cell"
    >
      <div
        class="col"
      >
        col2
      </div>
    </div>
    <div
      class="xl-col"
      role="cell"
    >
      <div
        class="col"
      >
        col3
      </div>
    </div>
    <div
      class="xl-col"
      role="cell"
    >
      <div
        class="col"
      >
        col4
      </div>
    </div>
  </div>
</div>
`;

exports[`Row 基本用法 1`] = `
<div>
  <div
    class="box"
  >
    <div
      class="xl-row"
      role="row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-4"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-5"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-7"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-8"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-row"
      role="row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-row"
      role="row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-8"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-0"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-8"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-8"
        role="cell"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
</div>
`;
